--- a/data/en/homepage.yml
+++ b/data/en/homepage.yml
@@ -66,7 +66,7 @@ feature:
 
 ####################### Schedule #############################
 schedule:
-  enable : false
+  enable : true
   # schedule data comes from "schedule.yml" file
 
 ####################### pricing #############################
