--- a/data/en/schedule.yml
+++ b/data/en/schedule.yml
@@ -25,7 +25,7 @@ schedule:
           image : "images/about/big-data.png"
           content : "
 
-          ### Speaker
+          ### Speakers
 
           ###### TBD
 
@@ -41,7 +41,7 @@ schedule:
 
           ###### Speakers and Org Committee
 
-          
+
           "
 
 
