--- a/data/en/schedule.yml
+++ b/data/en/schedule.yml
@@ -1,39 +1,45 @@
 schedule:
   enable : true
-  title_outline : "next meeting"
+  title_outline : "schedule"
   title : "Discussion Topic"
-  content : "Using Mobility Data to Monitor and Forecast the COVID-19""
+  content : "Clinical Data."
   schedule_tab:
     ################# tab itam loop ################
-    - title : "Speakers"
-      date_time : "10 December 2020 [09.00am - 10.30am PDT]"
+    - title : "Day 1"
+      date_time : "16 July 2020 [09.00am - 10.30am PDT]"
       schedule_items:
         # schedule loop item
-        - time : ""
+        - time : "9.00am"
           image : "images/about/wordpress.png"
           content : "
 
-          Speaker 1
+          ### Welcome
+
+          ###### By Organzing Committee
 
 
           "
 
         # schedule loop item
-        - time : ""
+        - time : "9.10am"
           image : "images/about/big-data.png"
           content : "
 
-          speaker 2
+          ### Speakers
+
+          ###### TBD
 
 
           "
 
         # schedule loop item
-        - time : ""
+        - time : "10am"
           image : "images/about/creativity.jpg"
           content : "
 
-         speaker 3
+          ### Discussion / Open Q&A
+
+          ###### Speakers and Org Committee
 
 
           "
