--- a/data/en/schedule.yml
+++ b/data/en/schedule.yml
@@ -1,21 +1,21 @@
 schedule:
   enable : true
-  title_outline : "schedule"
+  title_outline : "next meeting"
   title : "Discussion Topic"
-  content : "Clinical Data."
+  content : "Using Mobility Data to Monitor and Forecast the COVID-19."
   schedule_tab:
     ################# tab itam loop ################
-    - title : "Day 1"
-      date_time : "16 July 2020 [09.00am - 10.30am PDT]"
+    - title : "Speakers"
+      date_time : "10 December 2020 [09.00am - 10.30am PDT]"
       schedule_items:
         # schedule loop item
         - time : "9.00am"
           image : "images/about/wordpress.png"
           content : "
 
-          ### Welcome
+          ### Speaker 1
 
-          ###### By Organzing Committee
+          ###### Name
 
 
           "
@@ -25,9 +25,9 @@ schedule:
           image : "images/about/big-data.png"
           content : "
 
-          ### Speakers
+          ### Speaker 2
 
-          ###### TBD
+          ###### name
 
 
           "
@@ -37,9 +37,9 @@ schedule:
           image : "images/about/creativity.jpg"
           content : "
 
-          ### Discussion / Open Q&A
+          ### Speaker 3
 
-          ###### Speakers and Org Committee
+          ###### Name
 
 
           "
