--- a/data/en/homepage.yml
+++ b/data/en/homepage.yml
@@ -27,7 +27,7 @@ timer:
 ## The content below is just a copy from en/about.yml for starting out
 event:
   enable : true
-  title_outline : "Junk"
+  title_outline : "About"
   title : "Data drives the effort to beat COVID-19"
   image_back : "images/blog/may14-screen2.png"
   image_front : "images/blog/may14-screen.png"
