Change "Next Meeting" to "Register"

--- a/config.toml
+++ b/config.toml
@@ -119,7 +119,7 @@ preloader = "" # use jpg, png, svg or gif format.
 # Navigation button
 [params.navigation_button]
 enable = true
-label = "Next Meeting"
+label = "Register"
 link = "https://stanford.zoom.us/webinar/register/8216034837368/WN_-AJ4YDLzQWyCN0Tb0vPOvg"
 
 
