Update Chris V. title

--- a/data/en/schedule.yml
+++ b/data/en/schedule.yml
@@ -17,7 +17,8 @@ schedule:
 
           ### [Chris Volinksky, PhD](http://stats.research.att.com/volinsky/)
 
-          ###### Associate vice-president, Big Data Research, ATT Labs.
+          ###### Assistant Vice President, Data Science and AI
+          Research, AT&T.
 
 
           "
