--- a/data/en/schedule.yml
+++ b/data/en/schedule.yml
@@ -17,8 +17,7 @@ schedule:
 
           ### [Chris Volinksky, PhD](http://stats.research.att.com/volinsky/)
 
-          ###### Assistant Vice President, Data Science and AI
-          Research, AT&T.
+          ###### Assistant Vice President, Data Science and AI Research, Chief Data Office, AT&T.
 
 
           "
