--- a/data/en/schedule.yml
+++ b/data/en/schedule.yml
@@ -15,7 +15,7 @@ schedule:
           image : "images/people/2020-12-10/volinksy.jpg"
           content : "
 
-          ### [Chris Volinksky, PhD](http://stats.research.att.com/volinsky/)
+          ### [Chris Volinsky, PhD](http://stats.research.att.com/volinsky/)
 
           ###### Assistant Vice President, Data Science and AI Research, Chief Data Office, AT&T.
 
