Updated video links

--- a/config.toml
+++ b/config.toml
@@ -119,8 +119,9 @@ preloader = "" # use jpg, png, svg or gif format.
 # Navigation button
 [params.navigation_button]
 enable = true
-label = "Register"
-link = "https://stanford.zoom.us/webinar/register/8216034837368/WN_-AJ4YDLzQWyCN0Tb0vPOvg"
+label = "Next Event TBA"
+link = ""
+##link = "https://stanford.zoom.us/webinar/register/8216034837368/WN_-AJ4YDLzQWyCN0Tb0vPOvg"
 
 
 # Subscription
