--- a/data/en/schedule.yml
+++ b/data/en/schedule.yml
@@ -2,76 +2,57 @@ schedule:
   enable : true
   title_outline : ""  ## Anything here shows up in big letters using
                       ## font outlines and takes up space!
-  title : "Previous Event: Mobility data in monitoring and forecasting COVID-19"
-  content : "The goal of this event was to discuss the promises and challenges of large-scale human mobility data, and the diversity of ways it’s used to understand SARS-CoV-2 spread and the behavioral/policy responses to the pandemic. \n\nWe apologize for the partial loss of video in the initial stages."
+  title : "Upcoming Event: The role of data journalism in the COVID-19
+  pandemic"
+  content : "A defining feature of the COVID-19 pandemic has been the range of news outlets conducting their own data acquisition, aggregation, visualization, and analysis. Journalists are participants in the scientific process rather than conveyors of the results. The practice of data journalism goes back to at least the early 1970’s when journalists Philip Meyer, Donald Barlett and James Steele of the Philadelphia Inquirer accessed digitally recorded data to analyze sentencing patterns in the local Philadelphia court system. Since that time, data journalists have been active in obtaining, organizing, and analyzing public data to inform their reporting with quantitative force. These efforts may have gone largely unnoticed by scientists in the past, but have become highly visible this year and are supporting epidemiologists and data scientists working to understand the dynamics of the pandemic. 
+
+In this forum, we will examine the contributions of data journalism to informing our understanding and combat the pandemic; explore how journalists’ contributions may be shaping the scientific response and public policy; and hear from data scientists’ experience in utilizing these sources."
+
   schedule_tab:
     ################# tab itam loop ################
     - title : "Agenda"
-      date_time : "10 December 2020 [09.00am - 10.30am PDT]"
+      date_time : "Date TBA [09.00am - 10.30am PDT]"
       schedule_items:
 
         # schedule loop item
-        - time : "9.00am"
-          image : "images/people/2020-12-10/volinksy.jpg"
+        - time : "TBA"
+          image : "images/people/2021-03-08/irena_hwang.jpg"
           content : "
 
-          ### [Chris Volinsky, PhD](http://stats.research.att.com/volinsky/)
+          ### [Irena Hwang, PhD](https://twitter.com/irenatfh)
 
-          ###### Assistant Vice President, Data Science and AI Research, Chief Data Office, AT&T.
-
-          #### [Audio](https://youtu.be/Blab8omzrb8?t=158).
+          ###### Local data reporter, ProPublica.
 
           "
         # schedule loop item
-        - time : "9:05am"
-          image : "images/people/2020-12-10/Buckee_photograph-1200x1800.jpg"
+        - time : "TBA"
+          image : "images/people/2021-03-08/mark_hansen.jpg"
           content : "
 
-          ### [Caroline Buckee](https://www.hsph.harvard.edu/caroline-buckee/)
+          ### [Mark Hansen](https://journalism.columbia.edu/faculty/mark-hansen)
 
-          ###### Associate Professor of Epidemiology and Associate
-          Director of the Center for Communicable Disease Dynamics at
-          the Harvard T.H. Chan School of Public Health.
-
-          #### [Audio/Video](https://youtu.be/Blab8omzrb8?t=260).
-
+          ###### David and Helen Gurley Brown Professor of Journalism
+          and Innovation
 
           "
 
         # schedule loop item
-        - time : "9:25am"
-          image : "images/people/2020-12-10/Fraser.jpg"
+        - time : "TBA"
+          image : "images/people/2021-03-08/carolina_ana_moreno.jpg"
           content : "
 
-          ### Luca Ferretti
+          ### [Carolina Ana Moreno](https://twitter.com/anarina)
 
-          ###### Senior Researcher in Statistical Genetics and Pathogen Dynamics, Big Data Institute, Oxford
-          University, UK.
-
-          #### [Video](https://youtu.be/Blab8omzrb8?t=1486).
+          ###### Senior Data Journalist at TV Globo in São Paulo, Brasil.
 
           "
 
         # schedule loop item
-        - time : "9.45am"
-          image : "images/people/2020-12-10/Schroeder.jpg"
-          content : "
-
-          ### [Andrew Schoeder, PhD](https://www.directrelief.org/author/aschroeder/)
-
-          ###### Vice-president Research & Analytics for Direct Relief.
-
-          #### [Video](https://youtu.be/Blab8omzrb8?t=2790).
-          "
-
-        # schedule loop item
-        - time : "10:05am"
+        - time : "TBA"
           image : ""
           content : "
 
           ### Panel Q&A 
-
-          #### [Video](https://youtu.be/Blab8omzrb8?t=4471).
 
           "
 
