--- a/data/en/homepage.yml
+++ b/data/en/homepage.yml
@@ -12,12 +12,12 @@ banner:
 
 ########################## timer #################################
 timer:
-  enable : false
+  enable : true
   title : "**Time** to next conference"
   # set timer
-  year: "2020"
-  month: "12"
-  day: "10"
+  year: "2021"
+  month: "03"
+  day: "18"
   hour: "09"
 
 ############################## Event ##############################
