--- a/data/en/schedule.yml
+++ b/data/en/schedule.yml
@@ -4,18 +4,18 @@ schedule:
                       ## font outlines and takes up space!
   title : "Upcoming Event: The role of data journalism in the COVID-19
   pandemic"
-  content : "A defining feature of the COVID-19 pandemic has been the range of news outlets conducting their own data acquisition, aggregation, visualization, and analysis. Journalists are participants in the scientific process rather than conveyors of the results. The practice of data journalism goes back to at least the early 1970’s when journalists Philip Meyer, Donald Barlett and James Steele of the Philadelphia Inquirer accessed digitally recorded data to analyze sentencing patterns in the local Philadelphia court system. Since that time, data journalists have been active in obtaining, organizing, and analyzing public data to inform their reporting with quantitative force. These efforts may have gone largely unnoticed by scientists in the past, but have become highly visible this year and are supporting epidemiologists and data scientists working to understand the dynamics of the pandemic. 
+  content : "A defining feature of the COVID-19 pandemic has been the range of news outlets conducting their own data acquisition, aggregation, visualization, and analysis. Journalists are participants in the scientific process rather than conveyors of the results. The practice of data journalism goes back to at least the early 1970’s when journalists Philip Meyer, Donald Barlett and James Steele of the Philadelphia Inquirer accessed digitally recorded data to analyze sentencing patterns in the local Philadelphia court system. Since that time, data journalists have been active in obtaining, organizing, and analyzing public data to inform their reporting with quantitative force. These efforts may have gone largely unnoticed by scientists in the past, but have become highly visible this year and are supporting epidemiologists and data scientists working to understand the dynamics of the pandemic.
 
 In this forum, we will examine the contributions of data journalism to informing our understanding and combat the pandemic; explore how journalists’ contributions may be shaping the scientific response and public policy; and hear from data scientists’ experience in utilizing these sources."
 
   schedule_tab:
     ################# tab itam loop ################
     - title : "Agenda"
-      date_time : "Date TBA [09.00am - 10.30am PDT]"
+      date_time : "18 March 2021 [09.00am - 10.30am PDT]"
       schedule_items:
 
         # schedule loop item
-        - time : "TBA"
+        - time : ""
           image : "images/people/2021-03-08/irena_hwang.jpg"
           content : "
 
@@ -52,7 +52,7 @@ In this forum, we will examine the contributions of data journalism to informing
           image : ""
           content : "
 
-          ### Panel Q&A 
+          ### Panel Q&A
 
           "
 
