added registration link

--- a/config.toml
+++ b/config.toml
@@ -119,9 +119,9 @@ preloader = "" # use jpg, png, svg or gif format.
 # Navigation button
 [params.navigation_button]
 enable = true
-label = "Next Event TBA"
-link = ""
-##link = "https://stanford.zoom.us/webinar/register/8216034837368/WN_-AJ4YDLzQWyCN0Tb0vPOvg"
+label = "Register"
+##link = ""
+link = "https://stanford.zoom.us/webinar/register/1416141140945/WN_l8MdeZYeRhGcdU29dTM6sw"
 
 
 # Subscription
