updated Meghans info

--- a/data/en/schedule.yml
+++ b/data/en/schedule.yml
@@ -49,12 +49,12 @@ In this forum, we will examine the contributions of data journalism to informing
 
         # schedule loop item
         - time : "TBA"
-          image : "images/people/2021-03-08/meghan-hoyer.png"
+          image : "images/people/2021-03-08/MeghanHoyer.jpg"
           content : "
 
           ### [Meghan Hoyer](https://www.washingtonpost.com/people/meghan-hoyer/)
 
-          ###### Director of the data reporting team at The Washington Post.
+          ###### Director of data reporting at The Washington Post.
 
           "
 
