corrected Carol name

--- a/data/en/schedule.yml
+++ b/data/en/schedule.yml
@@ -41,7 +41,7 @@ In this forum, we will examine the contributions of data journalism to informing
           image : "images/people/2021-03-08/carolina_ana_moreno.jpg"
           content : "
 
-          ### [Carolina Ana Moreno](https://twitter.com/anarina)
+          ### [Ana Carolina Moreno](https://twitter.com/anarina)
 
           ###### Senior Data Journalist at TV Globo in São Paulo, Brasil.
 
