--- a/data/en/schedule.yml
+++ b/data/en/schedule.yml
@@ -32,7 +32,7 @@ In this forum, we will examine the contributions of data journalism to informing
           ### [Mark Hansen](https://journalism.columbia.edu/faculty/mark-hansen)
 
           ###### David and Helen Gurley Brown Professor of Journalism
-          and Innovation
+          and Innovation.
 
           "
 
