--- a/data/en/schedule.yml
+++ b/data/en/schedule.yml
@@ -1,71 +1,14 @@
 schedule:
-  enable : true
+  enable : false
   title_outline : ""  ## Anything here shows up in big letters using
                       ## font outlines and takes up space!
-  title : "Upcoming Event: The role of data journalism in the COVID-19
-  pandemic"
-  content : "A defining feature of the COVID-19 pandemic has been the range of news outlets conducting their own data acquisition, aggregation, visualization, and analysis. Journalists are participants in the scientific process rather than conveyors of the results. The practice of data journalism goes back to at least the early 1970’s when journalists Philip Meyer, Donald Barlett and James Steele of the Philadelphia Inquirer accessed digitally recorded data to analyze sentencing patterns in the local Philadelphia court system. Since that time, data journalists have been active in obtaining, organizing, and analyzing public data to inform their reporting with quantitative force. These efforts may have gone largely unnoticed by scientists in the past, but have become highly visible this year and are supporting epidemiologists and data scientists working to understand the dynamics of the pandemic.
-
-In this forum, we will examine the contributions of data journalism to informing our understanding and combat the pandemic; explore how journalists’ contributions may be shaping the scientific response and public policy; and hear from data scientists’ experience in utilizing these sources."
+  title : "Upcoming Event: Monitoring COVID-19 Vaccine Availability, Distribution, and Adoption"
+  content : "With the success of COVID-19 vaccine trials, focus has shifted to the distribution of these vaccines to reduce virus spread and mortality. However, distributing vaccines to the world’s population is a mammoth task facing considerable challenges. Vaccines have constraints on their manufacturing and storage, there are still intellectual property issues that need to be navigated, and there are logistical challenges to inoculating billions of people. Incomplete and heterogeneous vaccination coverage, exacerbated by health inequities and vaccine hesitancy, threatens to leave pockets of the population far below the herd immunity threshold. Novel viral variants are appearing and spreading in populations around the globe, but the degree to which they enhance transmission, increase disease severity, or evade vaccine-induced immune responses remains unclear. This forum will provide an overview of the state and direction of vaccine availability, distribution, and adoption by experts in health and policy with emphasis on the data driving our understanding and decisions."
 
   schedule_tab:
     ################# tab itam loop ################
     - title : "Agenda"
-      date_time : "18 March 2021 [09.00am - 10.30am PDT]"
-      schedule_items:
-
-        # schedule loop item
-        - time : "9:00am"
-          image : "images/people/2021-03-08/irena_hwang.jpg"
-          content : "
-
-          ### [Irena Hwang, PhD](https://twitter.com/irenatfh)
-
-          ###### Local data reporter, ProPublica.
-
-          "
-        # schedule loop item
-        - time : "9:05am"
-          image : "images/people/2021-03-08/mark_hansen.jpg"
-          content : "
-
-          ### [Mark Hansen](https://journalism.columbia.edu/faculty/mark-hansen)
-
-          ###### David and Helen Gurley Brown Professor of Journalism
-          and Innovation.
-
-          "
-
-        # schedule loop item
-        - time : "9:25am"
-          image : "images/people/2021-03-08/carolina_ana_moreno2.jpg"
-          content : "
-
-          ### [Ana Carolina Moreno](https://twitter.com/anarina)
-
-          ###### Senior Data Journalist at TV Globo in São Paulo, Brasil.
-
-          "
-
-        # schedule loop item
-        - time : "9:45am"
-          image : "images/people/2021-03-08/MeghanHoyer.jpg"
-          content : "
-
-          ### [Meghan Hoyer](https://www.washingtonpost.com/people/meghan-hoyer/)
-
-          ###### Director of data reporting at The Washington Post.
-
-          "
-
-                # schedule loop item
-        - time : "10:05am"
-          image : ""
-          content : "
-
-          ### Panel Q&A
-
-          "
+      date_time : "TBA"
 
     ################# tab itam loop ################
 #    - title : "Day 2"
